force-app/main/default/objects/conversion2__c/conversion2__c.object-meta.xml
<CustomObject>
    <label>conversion2</label>
    <nameField>
        <label>conversion2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>conversion2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>