force-app/main/default/objects/conversion2__c/fields/AnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>AnnualRevenue__c</fullName>
    <label>AnnualRevenue`</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>