force-app/main/default/objects/conversion2__c/fields/ConD_T__c.field-meta.xml
<CustomField>
    <fullName>ConD_T__c</fullName>
    <label>ConD&amp;T</label>
    <type>DateTime</type>
</CustomField>