force-app/main/default/objects/conversion2__c/fields/conDetail__c.field-meta.xml
<CustomField>
    <fullName>conDetail__c</fullName>
    <label>conDetail</label>
    <type>TextArea</type>
</CustomField>