force-app/main/default/objects/conversion2__c/fields/ConInterest__c.field-meta.xml
<CustomField>
    <fullName>ConInterest__c</fullName>
    <label>ConInterest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>