force-app/main/default/objects/conversion2__c/fields/NumberOfConv__c.field-meta.xml
<CustomField>
    <fullName>NumberOfConv__c</fullName>
    <label>NumberOfConv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>